# Vereinsknete

./: .dockerignore  .gitignore  ANDROID_IMPLEMENTATION_PLAN.md  ANDROID_INCREMENTAL_ROADMAP.md  ANDROID_PORT_ANALYSIS.md  ANDROID_SETUP_GUIDE.md  ANDROID_TEST_PLAN.md  CLAUDE.md  Dockerfile  ENVIRONMENT.md  LICENSE.md  MOCKUPS_DEUTSCH.md  README.md  WARP.md  build.yaml  dev.sh  docker-compose.yml  repository.yaml  run.sh
.claude/commands/: feature-plan.md
.github/: README.md  copilot-instructions.md
.github/workflows/: build-addon.yml  cd.yml  ci.yml  docker-publish.yml  release.yml
.kiro/specs/home-assistant-addon-docs/: design.md  home-assistant-addon-development-guide.md  requirements.md  tasks.md
.kiro/steering/: backend-api.md  backend-database.md  backend-infrastructure.md  backend-models.md  backend-testing-deployment.md  frontend-architecture.md  frontend-design-system.md  frontend-performance.md  frontend-state-management.md  frontend-ui-components.md  frontend-ux-patterns.md
addon/: .gitignore  CHANGELOG.md  DOCS.md  README.md  build.yaml  config.yaml
android/: PHASE_4_IMPLEMENTATION_PLAN.md  TEST_DOCUMENTATION.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/docs/: architecture-guidelines.md  design-guidelines.md  ux-guidelines.md
android/gradle/wrapper/: gradle-wrapper.properties
android/scripts/: clear-db.sh  seed-data.json  seed-data.schema.json  seed-db.sh
backend/: .env  .env.development  .env.production  Cargo.toml  README.md  diesel.toml
backend/migrations/2025-05-14-203138_create_tables/: down.sql  up.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  middleware.rs  schema.rs  shutdown.rs
backend/src/handlers/: client.rs  health.rs  invoice.rs  mod.rs  session.rs  user_profile.rs
backend/src/i18n/: mod.rs  translations.rs
backend/src/models/: client.rs  invoice.rs  mod.rs  session.rs  user_profile.rs
backend/src/schema/: mod.rs
backend/src/services/: client.rs  invoice.rs  mod.rs  pdf.rs  session.rs  user_profile.rs
backend/tests/: integration_tests.rs
backend/tests/common/: fixtures.rs  helpers.rs  mod.rs  test_db.rs
backend/tests/integration/: mod.rs
backend/tests/integration/api/: client_api_test.rs  invoice_api_test.rs  mod.rs  session_api_test.rs  user_profile_api_test.rs
backend/tests/integration/health/: health_check_test.rs  mod.rs
backend/tests/integration/middleware/: mod.rs  request_id_test.rs  security_headers_test.rs
frontend/: .env  .env.development  .env.production  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/jest-reporters/: compact-fail-summary.js
frontend/public/: index.html  language-init.js  manifest.json
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/: ConfirmDialog.tsx  LanguageSwitcher.tsx  Layout.tsx  Toast.tsx  UI.tsx
frontend/src/i18n/: de.ts  en.ts  index.ts
frontend/src/pages/: ClientFormPage.tsx  ClientsPage.tsx  DashboardPage.tsx  InvoiceGenerationPage.tsx  InvoicePage.tsx  InvoicesPage.tsx  ProfilePage.tsx  (+2 more)
prototype/: yoga-app-demo.html
specs/: Notes.md  PRD-MVP.txt  Tech-Design-MVP.txt
specs/ideas/: idea.md
(+148 files in other folders)
