[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
genpdf = "0.2"
rusttype = "0.9"
anyhow = "1"
lazy_static = "1.4"
