[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web framework
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"

# Database
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
r2d2 = "0.8"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
regex = "1"
base64 = "0.21"

# Environment
dotenvy = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# PDF generation
genpdf = "0.2"
rusttype = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Command line argument parsing
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
# Test / dev-only dependencies
# actix-rt: legacy runtime helpers used by some actix test utilities
actix-rt = "2"
# actix-http: request type used in actix-web test utilities generic bounds
actix-http = "3"
# tokio-test: utilities like block_on for async unit tests
tokio-test = "0.4"
# tempfile: create temporary sqlite files when persistence across connections needed
tempfile = "3"
# serial_test: ensure tests that share global state (like in-memory sqlite naming) run serially
serial_test = "3"
# bytes: handy for dealing with response bodies in integration tests
bytes = "1"
